# phone-validation-backend

./: README.md  app.py  gunicorn_config.py  pyproject.toml  requirements.txt
templates/: index.html
